--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,4 +1,21 @@
 <%= form_for @listing do |f| %>
-Title: <%= f.text_field :title %><br>
+
+<%= f.label :title %>
+<%= f.text_field :title %><br>
+<%= f.label :location, "Where:" %>
+<%= f.label :description %>
+<%= f.text_field :description %><br>
+<%= f.text_field :location %><br>
+<%= f.label :employment_type %>
+<%= f.text_field :employment_type %><br>
+<%= f.label :description %>
+<%= f.text_field :description %><br>
+<%= f.label :requirements %>
+<%= f.text_field :requirements %><br>
+<%= f.label :description %>
+<%= f.number_field :description %><br>
+
+
+
 <%= f.submit %>
   <% end %>
