--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -2,19 +2,20 @@
 
 <%= f.label :title %>
 <%= f.text_field :title %><br>
-<%= f.label :location, "Where:" %>
+<%= f.label :company, "Company name (if Private please state your name):" %>
+<%= f.text_field :company %><br>
+<%= f.label :location, "Where:"%>
+<%= f.text_field :location %><br>
 <%= f.label :description %>
 <%= f.text_field :description %><br>
-<%= f.text_field :location %><br>
 <%= f.label :employment_type %>
 <%= f.text_field :employment_type %><br>
 <%= f.label :description %>
 <%= f.text_field :description %><br>
 <%= f.label :requirements %>
 <%= f.text_field :requirements %><br>
-<%= f.label :description %>
+<%= f.label :retribution%>
 <%= f.number_field :description %><br>
-
 
 
 <%= f.submit %>
