--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -6,16 +6,14 @@
 <%= f.text_field :company %><br>
 <%= f.label :location, "Where:"%>
 <%= f.text_field :location %><br>
-<%= f.label :description %>
-<%= f.text_field :description %><br>
 <%= f.label :employment_type %>
-<%= f.text_field :employment_type %><br>
-<%= f.label :description %>
-<%= f.text_field :description %><br>
-<%= f.label :requirements %>
-<%= f.text_field :requirements %><br>
+<%= f.text_field :employment_type %><br><br>
+<%= f.label :description %><br>
+<%= f.text_area :description %><br>
+<%= f.label :requirements %><br>
+<%= f.text_area :requirements %><br><br>
 <%= f.label :retribution%>
-<%= f.number_field :description %><br>
+<%= f.number_field :retribution %><br><br>
 
 
 <%= f.submit %>
