--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,1 +1,6 @@
-<%=@listing.title%>
+<%=@listing.title%><br>
+<%=@listing.company%> - <%=@listing.location%><br><br>
+<%=@listing.employment_type%><br>
+<%=@listing.description%><br>
+<%=@listing.requirements%><br>
+<%@listing.restribution%>
