--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,6 +1,9 @@
-<%=@listing.title%><br>
-<%=@listing.company%> - <%=@listing.location%><br><br>
-<%=@listing.employment_type%><br>
+<p><strong><%=@listing.title%></p>
+<p><strong>Company: </strong> <%=@listing.company%></p>
+<p><strong>Location: </strong> <%=@listing.location%></p>
+<p><strong>Employment type: <%=@listing.employment_type%></p>
+<p><strong>Description</p>
 <%=@listing.description%><br>
-<%=@listing.requirements%><br>
-<%@listing.restribution%>
+<p><strong>Requirments</p>
+ <%=@listing.requirements%><br>
+<p><strong>Retribution: $<%@listing.retribution%></p>
