added more category seeds and user seed

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -5,5 +5,5 @@
 <strong>Description</strong><br>
 <%=@listing.description%><br>
 <strong>Requirements</strong><br>
- <li><%=@listing.requirements%></li>
+<%=@listing.requirements%><br>
 <strong>Retribution per month: </strong>$<%=@listing.retribution%>
